updated with css with media queries

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 	<head>
 		<title>Bootstrap Grid</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 	</head>
 	<body>
@@ -29,7 +30,7 @@
 
 			 	<div class="col-md-4 col-md-pull-0">
 			 		<h2> Budweiser</h2>
-			 		<img src="bud.jpg" height="52px" width="100">
+			 		<img class="bud"src="bud.jpg" height="52px" width="100">
 			 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -40,7 +41,7 @@
 
 			 	<div class="col-md-2 col-md-offset-2">
 			 		<h2 style="color:green">Guiness</h2>
-			 		<img src="guiness.jpg" height="52px" width="100">
+			 		<img class="guiness" src="guiness.jpg" height="52px" width="100">
 			 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -51,7 +52,7 @@
 
 			 	<div class="col-md-2 col-md-push-1">
 			 		<h2> Becks</h2>
-			 		<img src="becks.jpg" height="52px" width="100">
+			 		<img class="becks" src="becks.jpg" height="52px" width="100">
 			 		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -62,7 +63,7 @@
 
 			 	<div class="col-md-2 col-md-push-2">
 			 		<h2> Red Stripe</h2>
-			 		<img src="redstripe.jpg" height="62px" width="112">
+			 		<img class="red" src="redstripe.jpg" height="62px" width="112">
 			 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
